@@ -222,6 +222,7 @@ describe('vim._core', function()
       'vim._core.editor',
       'vim._core.ex_cmd',
       'vim._core.exrc',
+      'vim._core.help',
       'vim._core.options',
       'vim._core.server',
       'vim._core.shared',
